--- a/LeakyApp/MainWindow.xaml
+++ b/LeakyApp/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LeakyApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="200" Width="200">
+        Title="MainWindow" Height="300" Width="250">
 	<Grid>
-		<Button Content="Clock" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Click="Button_Click"/>
+		<Button Content="Start" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Click="Start_Click" Margin="59,52,58,97"/>
+		<Button Content="Stop" HorizontalAlignment="Center" VerticalAlignment="Center" Width="76" Click="Stop_Click" Margin="59,77,57,72"/>
 	</Grid>
 </Window>
